# deep_lt

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.build-context  README.md  docker-compose.yml  hparams.yaml  labels.json  pyproject.toml  requirements.txt  search_lm_params.py  test.py  train.py  transcribe.py  working.py
data/: babel_splitter.py  local.py  merge_manifests.py
deepspeech_pytorch/: config.py  decoder.py  enums.py  model.py  testing.py  training.py  utils.py  validation.py
deepspeech_pytorch/data/: data_opts.py  utils.py
deepspeech_pytorch/loader/: data_loader.py  data_module.py  merge_manifests.py  utils.py
manifests/: train_liepa_manifest.csv  val_liepa_manifest.csv  val_manifest.csv
notebooks/: Untitled.ipynb
outputs/2020-07-12/15-16-21/.hydra/: config.yaml
outputs/2020-07-12/15-18-06/.hydra/: hydra.yaml
outputs/2020-07-12/15-20-36/.hydra/: overrides.yaml
outputs/2020-07-12/15-22-21/.hydra/: config.yaml  hydra.yaml
